// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complete() should do { result: false, reason: 'existedInvalidRequest' }. 1`] = `
Array [
  Object {
    "payload": [Error: Error - There are requests that were rejected or canceled during the period.],
    "type": "CATCH_BUSINESS_ERROR",
  },
]
`;

exports[`complete() should do { result: false, reason: 'existedSubmittingRequest' }. 1`] = `
Array [
  Object {
    "payload": [Error: Error - There is a request waiting for approval during the period.],
    "type": "CATCH_BUSINESS_ERROR",
  },
]
`;

exports[`complete() should do { result: true }. 1`] = `Array []`;

exports[`error() should do. 1`] = `
Array [
  Object {
    "payload": Object {
      "errorCode": undefined,
      "isContinuable": true,
      "isFunctionCantUseError": false,
      "message": "APIエラー - Error Test",
      "problem": "Error Test",
      "stackTrace": "",
      "type": "APIエラー",
    },
    "type": "CATCH_API_ERROR",
  },
]
`;

exports[`finally() should do. 1`] = `
Array [
  Object {
    "type": "LOADING_END",
  },
]
`;

exports[`start() should do. 1`] = `
Array [
  Object {
    "type": "LOADING_START",
  },
]
`;
